# tablero_entrenador

./: .env.example  .gitignore  ESPECIFICACION_Tablero_Entrenador.docx  ESPECIFICACION_Tablero_Entrenador.md  README.md  pyproject.toml  requirements.txt
client/: index.html  package-lock.json  package.json  vite.config.js
client/scripts/: gen-icons.mjs
client/src/: App.jsx  api.js  main.jsx
client/src/components/: Chart.jsx  ConfirmDialog.jsx  CsvBar.jsx  ErrorBoundary.jsx  ExerciseRow.jsx  Field.jsx  LevelTag.jsx  MediaPicker.jsx  MediaView.jsx  TabBar.jsx  Toast.jsx
client/src/lib/: format.js  levels.js  media.js
client/src/pages/: Athletes.jsx  Editor.jsx  ExerciseView.jsx  Login.jsx  Progress.jsx  TestDay.jsx  Today.jsx
client/src/state/: store.jsx
client/src/styles/: app.css  tokens.css
deploy/: README-deploy.md  backup.sh  tablero-entrenador.service
deploy/nginx/: fitness.streamlytics.stream.conf
docs/: PLAN-Y-DECISIONES.md  PRUEBAS.md
server/: auth.py  config.py  db.py  logic.py  main.py  migrate.py  models.py  schemas.py  seed.py  services.py
server/routers/: athletes.py  auth.py  csvio.py  export.py  levels.py  patterns.py  progress.py  routines.py  sessions.py  tests.py  uploads.py
tests/: conftest.py  test_athletes.py  test_auth.py  test_levels_days.py  test_logic.py  test_sessions_progress.py  test_uploads_csv.py
