[project]
name = "tablero-entrenador"
version = "1.0.0"
description = "Tablero del Entrenador — webapp monousuario para método de entrenamiento funcional (A/B/C por patrón)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "bcrypt>=4.1",
    "pydantic-settings>=2.4",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools]
packages = ["server", "server.routers"]
